@@ -19,9 +19,13 @@ import java.time.LocalDate;
 import java.util.List;
 import java.util.Objects;
 
+/**
+ * Service class to manage provider invoices.
+ * Implements CRUD operations and business logic for provider documents.
+ */
 @Service
 @RequiredArgsConstructor
-public class ProviderInvoiceService implements DocumentService{
+public class ProviderInvoiceService implements DocumentService {
 
     private final DocumentMapper documentMapper;
     private final DocumentRepository documentRepository;
@@ -34,6 +38,12 @@ public class ProviderInvoiceService implements DocumentService{
     private final OrderRepository orderRepository;
     private final DocumentUtils documentUtils;
 
+    /**
+     * Retrieves all documents filtered by document type for the current owner company.
+     *
+     * @param type the document type.
+     * @return list of documents DTO for the given type.
+     */
     @Transactional(readOnly = true)
     @Override
     public List<DocumentForListDTO> getAllDocumentsByType(DocumentType type) {
@@ -44,6 +54,13 @@ public class ProviderInvoiceService implements DocumentService{
         return documentMapper.toListDtosFromProjection(entities);
     }
 
+    /**
+     * Retrieves documents by document type and company ID.
+     *
+     * @param type the document type.
+     * @param idCompany the company ID.
+     * @return list of documents DTO.
+     */
     @Transactional(readOnly = true)
     @Override
     public List<DocumentForListDTO> getDocumentsByCompanyId(DocumentType type, Integer idCompany) {
@@ -54,6 +71,13 @@ public class ProviderInvoiceService implements DocumentService{
         return documentMapper.toListDtosFromProjection(entities);
     }
 
+    /**
+     * Retrieves documents by document type and status.
+     *
+     * @param type the document type.
+     * @param status the document status.
+     * @return list of documents DTO.
+     */
     @Transactional(readOnly = true)
     @Override
     public List<DocumentForListDTO> getDocumentsByStatus(DocumentType type, DocumentStatus status) {
@@ -64,6 +88,14 @@ public class ProviderInvoiceService implements DocumentService{
         return documentMapper.toListDtosFromProjection(entities);
     }
 
+    /**
+     * Retrieves documents by document type, company ID and status.
+     *
+     * @param type the document type.
+     * @param idCompany the company ID.
+     * @param status the document status.
+     * @return list of documents DTO.
+     */
     @Transactional(readOnly = true)
     @Override
     public List<DocumentForListDTO> getDocumentsByIdCompanyAndStatus(DocumentType type, Integer idCompany, DocumentStatus status) {
@@ -72,6 +104,14 @@ public class ProviderInvoiceService implements DocumentService{
         return documentMapper.toListDtosFromProjection(entities);
     }
 
+    /**
+     * Retrieves a document by its ID and type.
+     *
+     * @param type the document type.
+     * @param id the document ID.
+     * @return the document DTO.
+     * @throws DocumentNotFoundException if the document is not found.
+     */
     @Transactional(readOnly = true)
     @Override
     public DocumentDTO getDocumentById(DocumentType type, Integer id) {
@@ -83,14 +123,27 @@ public class ProviderInvoiceService implements DocumentService{
         return documentMapper.toDto(entity);
     }
 
+    /**
+     * Creates a new provider invoice document.
+     *
+     * @param idCompany the company ID.
+     * @param dto the base document DTO containing data.
+     * @param type the document type.
+     * @return the created document DTO.
+     * @throws CantCreateDocumentWithoutOrdersException if no orders are linked.
+     * @throws InvalidVatRateException if VAT rate is invalid.
+     * @throws InvalidWithholdingException if withholding percentage is invalid.
+     * @throws CantIncludeOrderAlreadyBilledException if an order is already billed on a different invoice.
+     * @throws OrderDoNotBelongToCompanyException if orders belong to a different company.
+     */
     @Transactional
     @Override
     public DocumentDTO createDocument(Integer idCompany, BaseDocumentDTO dto, DocumentType type) {
         Company owner = companyService.getCurrentCompanyOrThrow();
-        String currency=null;
-        LocalDate deadline=null;
+        String currency = null;
+        LocalDate deadline = null;
 
-        // 1. Recuperar entidades relacionadas
+        // 1. Retrieve related entities
         ChangeRate changeRate = changeRateService.getChangeRateByIdAndOwner(dto.getIdChangeRate(), owner);
         BankAccount bankAccount = dto.getIdBankAccount() != null ? bankAccountService.getBankAccountByIdAndOwner(dto.getIdBankAccount(), owner) : null;
         Document parent = dto.getIdDocumentParent() == null ? null : documentRepository.findByOwnerCompanyAndIdDocumentAndDocType(owner, dto.getIdDocumentParent(), type)
@@ -100,28 +153,27 @@ public class ProviderInvoiceService implements DocumentService{
             throw new CantCreateDocumentWithoutOrdersException();
         }
 
-        //Verificar que los % son correctos
-        if(dto.getVatRate()<1){
+        // Validate percentages
+        if (dto.getVatRate() < 1) {
             throw new InvalidVatRateException();
         }
-        if(dto.getWithholding()<1){
+        if (dto.getWithholding() < 1) {
             throw new InvalidWithholdingException();
         }
 
         Company orderCompany = getCompany(idCompany, orders, parent);
 
-        Company company=companyRepository.findByIdCompany(idCompany)
+        Company company = companyRepository.findByIdCompany(idCompany)
                 .orElseThrow(CompanyNotFoundException::new);
 
-        //2. Campos calculados
-        Provider provider=providerRepository.findByOwnerCompanyAndCompany(owner,orderCompany)
+        // 2. Calculate fields
+        Provider provider = providerRepository.findByOwnerCompanyAndCompany(owner, orderCompany)
                 .orElseThrow(ProviderNotFoundException::new);
 
         currency = changeRate.getCurrency1();
         deadline = documentUtils.calculateDeadline(dto.getDocDate(), provider.getDuedate());
 
-
-        // 3. Crear entidad
+        // 3. Create entity
         Document entity = documentMapper.toEntity(dto, changeRate, bankAccount, parent, orders);
         entity.setOwnerCompany(owner);
         entity.setCompany(company);
@@ -129,31 +181,43 @@ public class ProviderInvoiceService implements DocumentService{
         entity.setDeadline(deadline);
         entity.setDocType(type);
 
-        //4. Calcular los totales
+        // 4. Calculate totals
         documentUtils.calculateTotals(entity);
 
-        // 5. Marcar los pedidos como facturados (antes de guardar el documento)
+        // 5. Mark orders as billed before saving the document
         orderService.markOrdersAsBilled(orders);
 
-        // 6. Guardar el documento
+        // 6. Save the document
         Document newEntity = documentRepository.save(entity);
 
         return documentMapper.toDto(newEntity);
     }
 
+    /**
+     * Updates an existing provider invoice document.
+     * If the document is already modified or paid, restrictions apply.
+     *
+     * @param idDocument the document ID.
+     * @param dto the update DTO.
+     * @param type the document type.
+     * @return the updated document DTO.
+     * @throws CantModifyDocumentAlreadyModified if document status is MODIFIED.
+     * @throws CantModifyPaidInvoiceException if invoice is paid.
+     * @throws DocumentNotFoundException if document is not found.
+     */
     @Transactional
     @Override
     public DocumentDTO updateDocument(Integer idDocument, BaseDocumentDTO dto, DocumentType type) {
         Company owner = companyService.getCurrentCompanyOrThrow();
-        Document entityParent = documentRepository.findByOwnerCompanyAndIdDocumentAndDocType(owner,idDocument, type)
+        Document entityParent = documentRepository.findByOwnerCompanyAndIdDocumentAndDocType(owner, idDocument, type)
                 .orElseThrow(DocumentNotFoundException::new);
 
-        if(entityParent.getStatus().equals(DocumentStatus.MODIFIED)){
+        if (entityParent.getStatus().equals(DocumentStatus.MODIFIED)) {
             throw new CantModifyDocumentAlreadyModified();
         }
 
-        if(entityParent.getDocType().equals(DocumentType.INV_PROV)){
-            if(!entityParent.getStatus().equals(DocumentStatus.PENDING)){
+        if (entityParent.getDocType().equals(DocumentType.INV_PROV)) {
+            if (!entityParent.getStatus().equals(DocumentStatus.PENDING)) {
                 throw new CantModifyPaidInvoiceException();
             }
             entityParent.setStatus(DocumentStatus.MODIFIED);
@@ -161,11 +225,17 @@ public class ProviderInvoiceService implements DocumentService{
         }
 
         dto.setIdDocumentParent(entityParent.getIdDocument());
-        Integer idCompany=entityParent.getCompany().getIdCompany();
+        Integer idCompany = entityParent.getCompany().getIdCompany();
 
-        return createDocument(idCompany,dto,DocumentType.INV_PROV);
+        return createDocument(idCompany, dto, DocumentType.INV_PROV);
     }
 
+    /**
+     * Soft deletes a document by setting its status to DELETED.
+     *
+     * @param id the document ID.
+     * @throws DocumentNotFoundException if document is not found.
+     */
     @Transactional
     @Override
     public void softDeleteDocument(Integer id) {
@@ -176,20 +246,30 @@ public class ProviderInvoiceService implements DocumentService{
         documentRepository.save(entity);
     }
 
+    /**
+     * Helper method to verify orders belong to the company and are not already billed elsewhere.
+     *
+     * @param idCompany the expected company ID.
+     * @param orders list of orders linked to the document.
+     * @param parent parent document if updating.
+     * @return the company of the orders.
+     * @throws CantIncludeOrderAlreadyBilledException if an order is billed in another invoice.
+     * @throws OrderDoNotBelongToCompanyException if orders belong to different company.
+     */
     private static Company getCompany(Integer idCompany, List<Order> orders, Document parent) {
-        Company orderCompany= orders.getFirst().getCompany();
+        Company orderCompany = orders.get(0).getCompany();
 
-        for(Order order : orders){
-            // Verifica si el pedido ya está vinculado a otra factura activa
+        for (Order order : orders) {
+            // Check if order is already linked to another active invoice
             if (order.getBilled() != null && order.getBilled()) {
-                // Busca si el pedido está en la factura "padre"
+                // Check if the order is part of the parent modified invoice
                 boolean isPartOfModifiedInvoice = parent != null && parent.getOrders().contains(order);
 
                 if (!isPartOfModifiedInvoice) {
                     throw new CantIncludeOrderAlreadyBilledException();
                 }
             }
-            if(!Objects.equals(orderCompany.getIdCompany(), idCompany)){
+            if (!Objects.equals(orderCompany.getIdCompany(), idCompany)) {
                 throw new OrderDoNotBelongToCompanyException();
             }
         }
